[project]
name = "retrotool"
version = "1.0.0"
description = "SNES/SFC ROM hacking and development toolkit — address math, compression, script, debugger IPC, asar/bass/ca65, libSFX project builds, Godot/Tiled export"
readme = "README.md"
authors = [{name = "Daniel Burgess", email = "daniel@herotechsys.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["snes", "sfc", "rom-hacking", "retro", "nintendo", "asar", "mesen", "lzss", "godot", "tiled"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chardet>=5.2.0",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
# libsfx — full Optiroc SNES toolchain (libSFX + ca65 + SuperFamiconv +
# SuperFamicheck + brrtools + lz4 + make_breakpoints).
libsfx = ["retrotool-libsfx>=0.1.0"]
# asar — SNES assembler (LGPL-3.0-or-later binary bundled in the wheel).
asar = ["retrotool-asar>=0.1.0"]
# bass — bass v18 (ARM9 fork) multi-architecture assembler (ISC binary
# bundled, with `architectures/*.arch` next to it for runtime lookup).
bass = ["retrotool-bass>=0.1.0"]
# xdelta — binary delta patcher (Apache-2.0 binary bundled in the wheel).
xdelta = ["retrotool-xdelta>=0.1.0"]
# all — every bundled-binary wheel at once.
all = [
    "retrotool-libsfx>=0.1.0",
    "retrotool-asar>=0.1.0",
    "retrotool-bass>=0.1.0",
    "retrotool-xdelta>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["retrotool*"]
exclude = ["tests*", "examples*"]

# Pytest's default `norecursedirs` includes "build" (standard Python build
# output dir). We have a real test subpackage at tests/build/ that collides
# with that default — override to the stock list minus "build".
[tool.pytest.ini_options]
norecursedirs = ["*.egg", ".*", "_darcs", "CVS", "dist", "node_modules", "venv", "{arch}", "vendor", "packages"]

[project.scripts]
retrotool = "retrotool.cli:main"

[project.urls]
Homepage = "https://github.com/danielburgess/SFCRetroTools"
Repository = "https://github.com/danielburgess/SFCRetroTools"
Issues = "https://github.com/danielburgess/SFCRetroTools/issues"
